# bid

./: Cargo.toml  LICENSE  README.md
src/: bid.rs  encoding.rs  error.rs  generator.rs  lib.rs
