[package]
name = "bid"
version = "0.1.0"
edition = "2021"
authors = ["Blankly Contributors"]
license = "MIT"
repository = "https://github.com/blankly-app/bid"
description = "Typed ULID-compatible 128-bit sortable identifiers"

[dependencies]
getrandom = "0.2"
thiserror = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1.0"
